--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_date_time_picker: ^0.0.4
   get: ^4.6.5
   http: ^0.13.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
